# melox

./: Cargo.toml
src/: app_error.rs  encrypt.rs  main.rs  models.rs  mongodb_client.rs
src/commands/: mod.rs
src/database/: mod.rs  mongodb.rs
