[package]
name = "melox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
axum = { version = "0.6.20", features = ["http2"] }
bs58 = "0.5.0"
bson = "2.6.1"
mongodb = "2.6.1"
rand = "0.8.5"
serde = { version = "1.0.185", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
